syntax = "proto3";

package greet;
option go_package = "github.com/priyanshu-sharma-99/lrn-grpc-v0/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
}